--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
-  "name": "eclipse",
-  "version": "1.0.0",
+  "name": "eclipse-key-panel",
+  "version": "2.0.0",
+  "description": "Modern key management panel for Eclipse loader",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "body-parser": "^1.20.2"
-  }
+  },
+  "keywords": [
+    "key-management",
+    "authentication",
+    "panel"
+  ],
+  "author": "Eclipse Team",
+  "license": "MIT"
 }
