--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "eclipse-key-panel",
-  "version": "2.0.0",
-  "description": "Modern key management panel for Eclipse loader",
+  "name": "eclipse-multi-app",
+  "version": "3.0.0",
+  "description": "Multi-application key management system with HWID locking",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -13,8 +13,9 @@
   },
   "keywords": [
     "key-management",
-    "authentication",
-    "panel"
+    "hwid",
+    "multi-app",
+    "authentication"
   ],
   "author": "Eclipse Team",
   "license": "MIT"
